# HyperLight

./: Pipfile  README.md  docker-compose.yml  dockerfile  requirements.txt  run.sh
hypergrad/: CMakeLists.txt  build.sh
hypergrad/include/: fcnn.h  fcnn.hpp
hypergrad/src/: bindings.cpp  fcnn.cpp  main.cpp
hypergrad/tests/: test_fcnn.cpp
hyperlight/: Pipfile  dockerfile  main.py  requirements-dev.txt  requirements.txt
hyperlight/c/: main.cpp
hyperlight/notebooks/: scratch.ipynb
hyperlight/protos/: fcnn.proto
hyperlight/src/: client.py  fcnn_pb2.py  fcnn_pb2.pyi  fcnn_pb2_grpc.py  server.py
hyperlight/tests/: test_neuralnet.py
hyperviz/: envoy.yaml  package-lock.json  package.json
hyperviz/src/app/: fcnn.ts  fcnn_grpc_web_pb.js  fcnn_pb.js  page.tsx  renderer.ts
hyperviz/src/lib/: fcnn.ts  renderer.ts
tests/: test_neuralnet.py
